--- a/www/style/main-page.css
+++ b/www/style/main-page.css
@@ -51,7 +51,6 @@
   margin-bottom: 0px;
   width: 20px;
   height: 20px;
-  margin: 5px 5px;
 }
 
 input:focus:not(:checked) + #toggle-menu,
@@ -89,8 +88,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
         grid-template-columns: 280px 120px 1fr;
     -ms-grid-rows: 1fr 40px;
         grid-template-rows: 1fr 40px;
-        grid-template-areas: "a b c"
- "d d d";
+        grid-template-areas: "a b c" "d d d";
   }
 }
 
@@ -292,7 +290,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 
 #nav-menu .burger-menu-ul {
   z-index: 5;
-  position: fixed;
+  position: absolute;
   left: 0;
   width: 100%;
   background-color: transparent;
@@ -312,9 +310,8 @@ input:focus:not(:checked) + #toggle-menu-2 {
     z-index: 0;
     height: 43px;
     /*position: relative;*/
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 
@@ -409,6 +406,7 @@ input:focus:not(:checked) + #toggle-menu-2 {
 @media (min-width: 900px) {
   #nav-menu .burger-menu-ul li a {
     font-size: 1.1rem;
+    color: black;
     display: block;
     border-bottom: black solid 2px;
     line-height: 1.8rem;
@@ -457,6 +455,12 @@ input:focus:not(:checked) + #toggle-menu-2 {
   height: 85px;
 }
 
+@media (min-width: 900px) {
+  #toggle-menu-2 {
+    display: none;
+  }
+}
+
 /* Search menu and hamburger menu accessibility */
 /* Hide spans */
 .vh {
@@ -484,6 +488,33 @@ input:focus:not(:checked) + #toggle-menu-2 {
 
 [type="checkbox"]:not(:checked) ~ label .collapsed-text {
   display: inline;
+}
+
+/*
+    @include tablet-and-up {
+        display: none;
+    }
+}
+*/
+/*#cb-hack, #cb-hack-2 {
+    @include tablet-and-up {
+    
+        display: none;
+    }
+}*/
+@media (min-width: 900px) {
+  .main-menu-li-links {
+    grid-area: b;
+    display: inline-block;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+}
+
+@media (min-width: 900px) {
+  #toggle-2 {
+    display: none;
+  }
 }
 
 /*** 
